--- a/package.json
+++ b/package.json
@@ -4,10 +4,54 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
+    "@nrwl/nest": "^18.3.4",
+    "@nx/eslint": "18.3.4",
+    "@nx/eslint-plugin": "18.3.4",
+    "@nx/jest": "18.3.4",
     "@nx/js": "18.3.4",
+    "@nx/nest": "18.3.4",
+    "@nx/node": "18.3.4",
+    "@nx/web": "18.3.4",
+    "@nx/webpack": "18.3.4",
     "@nx/workspace": "18.3.4",
-    "nx": "18.3.4"
+    "@swc-node/register": "~1.8.0",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
+    "@types/jest": "^29.4.0",
+    "@types/node": "~18.16.9",
+    "@typescript-eslint/eslint-plugin": "^7.3.0",
+    "@typescript-eslint/parser": "^7.3.0",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
+    "nx": "18.3.4",
+    "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.4.2",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@apollo/gateway": "^2.7.4",
+    "@apollo/subgraph": "^2.7.4",
+    "@nestjs/apollo": "^12.1.0",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.2.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/graphql": "^12.1.1",
+    "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/typeorm": "^10.0.2",
+    "apollo-server-express": "^3.13.0",
+    "axios": "^1.6.0",
+    "graphql": "^16.8.1",
+    "pg": "^8.11.5",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.20"
   }
 }
