--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nrwl/nest": "^18.3.4",
@@ -14,22 +16,39 @@
     "@nx/js": "18.3.4",
     "@nx/nest": "18.3.4",
     "@nx/node": "18.3.4",
+    "@nx/react": "^18.3.4",
     "@nx/web": "18.3.4",
     "@nx/webpack": "18.3.4",
     "@nx/workspace": "18.3.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.8.0",
+    "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
+    "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.16.9",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
+    "@types/react-is": "18.2.2",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
+    "babel-jest": "^29.4.1",
+    "babel-plugin-styled-components": "1.10.7",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "nx": "18.3.4",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
@@ -37,6 +56,7 @@
   },
   "dependencies": {
     "@apollo/gateway": "^2.7.4",
+    "@apollo/sandbox": "^2.5.1",
     "@apollo/subgraph": "^2.7.4",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.2",
@@ -49,8 +69,12 @@
     "axios": "^1.6.0",
     "graphql": "^16.8.1",
     "pg": "^8.11.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-is": "18.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "styled-components": "5.3.6",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.20"
   }
