--- a/package.json
+++ b/package.json
@@ -63,11 +63,20 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/graphql": "^12.1.1",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^10.0.2",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.6.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "express-oauth2-jwt-bearer": "^1.6.0",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
