--- a/package.json
+++ b/package.json
@@ -58,12 +58,16 @@
     "@apollo/gateway": "^2.7.4",
     "@apollo/sandbox": "^2.5.1",
     "@apollo/subgraph": "^2.7.4",
+    "@grpc/grpc-js": "^1.10.7",
+    "@grpc/proto-loader": "^0.7.13",
+    "@grpc/reflection": "^1.0.4",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/microservices": "^10.3.8",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^10.0.2",
