Write Accounts to User DB

--- a/services/plaid-service/.env
+++ b/services/plaid-service/.env
@@ -3,5 +3,10 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=your_password
-DB_NAME=plaid-service
+PLAID_DB_NAME=plaid-service
+USER_DB_NAME=user-service
 DB_SYNCRONIZE=true
+
+# Plaid API
+PLAID_CLIENT_ID=6633d288dfdbfd001c401ec9
+PLAID_SECRET=c14555828f77e03595e67ee94d8c65
