--- a/services/plaid-service/.env
+++ b/services/plaid-service/.env
@@ -3,9 +3,11 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=your_password
+DB_SYNCRONIZE=true
+
 PLAID_DB_NAME=plaid-service
 USER_DB_NAME=user-service
-DB_SYNCRONIZE=true
+TRANSACTION_DB_NAME=transaction-service
 
 # Plaid API
 PLAID_CLIENT_ID=6633d288dfdbfd001c401ec9
