--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@expo/cli": "~0.16.5",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nrwl/nest": "^18.3.4",
+    "@nx/cypress": "18.3.4",
     "@nx/eslint": "18.3.4",
     "@nx/eslint-plugin": "18.3.4",
+    "@nx/expo": "^18.3.4",
     "@nx/jest": "18.3.4",
     "@nx/js": "18.3.4",
     "@nx/nest": "18.3.4",
@@ -26,10 +29,12 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
+    "@testing-library/jest-native": "~5.4.3",
     "@testing-library/react": "14.0.0",
+    "@testing-library/react-native": "~12.4.2",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.16.9",
-    "@types/react": "18.2.33",
+    "@types/react": "~18.2.45",
     "@types/react-dom": "18.2.14",
     "@types/react-is": "18.2.2",
     "@types/styled-components": "5.1.26",
@@ -37,8 +42,11 @@
     "@typescript-eslint/parser": "^7.3.0",
     "babel-jest": "^29.4.1",
     "babel-plugin-styled-components": "1.10.7",
+    "babel-preset-expo": "~10.0.0",
+    "cypress": "^13.6.6",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
@@ -46,18 +54,25 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "jest-expo": "~50.0.1",
     "nx": "18.3.4",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
+    "react-test-renderer": "18.2.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.2",
     "@apollo/gateway": "^2.7.4",
     "@apollo/sandbox": "^2.5.1",
     "@apollo/subgraph": "^2.7.4",
+    "@expo/metro-config": "~0.17.3",
+    "@expo/metro-runtime": "~3.1.1",
+    "@expo/vector-icons": "^14.0.1",
+    "@expo/webpack-config": "^19.0.1",
     "@grpc/grpc-js": "^1.10.7",
     "@grpc/proto-loader": "^0.7.13",
     "@grpc/reflection": "^1.0.4",
@@ -71,10 +86,18 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^10.0.2",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "crypto-browserify": "^3.12.0",
+    "date-fns": "^3.6.0",
+    "expo": "~50.0.3",
+    "expo-splash-screen": "~0.26.1",
+    "expo-status-bar": "~1.11.1",
     "express-oauth2-jwt-bearer": "^1.6.0",
     "graphql": "^16.8.1",
     "graphql-depth-limit": "^1.1.0",
@@ -88,10 +111,18 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
+    "react-native": "0.73.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
+    "react-native-svg-transformer": "1.2.0",
+    "react-native-web": "~0.19.9",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "stream-browserify": "^3.0.0",
     "styled-components": "5.3.6",
     "tslib": "^2.3.0",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "react-native-pager-view": "6.2.3"
   }
 }
