--- a/package.json
+++ b/package.json
@@ -112,10 +112,13 @@
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-collapsible-tab-view": "^7.0.1",
+    "react-native-pager-view": "6.2.3",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "1.2.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.9",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
@@ -123,6 +126,6 @@
     "styled-components": "5.3.6",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.20",
-    "react-native-pager-view": "6.2.3"
+    "react-native-reanimated": "~3.6.2"
   }
 }
