--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@shopify/flash-list": "1.6.3",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.6.0",
     "class-transformer": "^0.5.1",
@@ -96,6 +97,7 @@
     "crypto-browserify": "^3.12.0",
     "date-fns": "^3.6.0",
     "expo": "~50.0.3",
+    "expo-dev-client": "~3.3.11",
     "expo-splash-screen": "~0.26.1",
     "expo-status-bar": "~1.11.1",
     "express-oauth2-jwt-bearer": "^1.6.0",
@@ -112,20 +114,21 @@
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
     "react-native": "0.73.2",
-    "react-native-collapsible-tab-view": "^7.0.1",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-pager-view": "6.2.3",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "1.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.9",
+    "react-native-webview": "13.6.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "stream-browserify": "^3.0.0",
     "styled-components": "5.3.6",
     "tslib": "^2.3.0",
-    "typeorm": "^0.3.20",
-    "react-native-reanimated": "~3.6.2"
+    "typeorm": "^0.3.20"
   }
 }
