--- a/apps/prowl-mobile/app.json
+++ b/apps/prowl-mobile/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "name": "ProwlMobile",
+    "scheme": "app",
     "slug": "prowl-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
