--- a/apps/prowl-mobile/app.json
+++ b/apps/prowl-mobile/app.json
@@ -18,7 +18,8 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.prowlmobile.app"
+      "bundleIdentifier": "com.prowlmobile.app",
+      "associatedDomains": ["applinks:https://ed1b3cf31c9e.ngrok.app/"]
     },
     "android": {
       "adaptiveIcon": {
