--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@apollo/client": "^3.10.2",
     "@apollo/gateway": "^2.7.4",
     "@apollo/sandbox": "^2.5.1",
+    "@apollo/server": "^4.10.4",
     "@apollo/subgraph": "^2.7.4",
     "@expo/metro-config": "~0.17.3",
     "@expo/metro-runtime": "~3.1.1",
@@ -97,7 +98,9 @@
     "crypto-browserify": "^3.12.0",
     "date-fns": "^3.6.0",
     "expo": "~50.0.3",
+    "expo-auth-session": "^5.5.2",
     "expo-dev-client": "~3.3.11",
+    "expo-linking": "^6.3.1",
     "expo-splash-screen": "~0.26.1",
     "expo-status-bar": "~1.11.1",
     "express-oauth2-jwt-bearer": "^1.6.0",
@@ -114,6 +117,7 @@
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-auth0": "^3.2.0",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-pager-view": "6.2.3",
     "react-native-reanimated": "~3.6.2",
