--- a/apps/prowl-mobile/ios/ProwlMobile/Info.plist
+++ b/apps/prowl-mobile/ios/ProwlMobile/Info.plist
@@ -48,6 +48,10 @@
     </array>
     <key>CFBundleVersion</key>
     <string>1</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>exp</string>
+    </array>
     <key>LSRequiresIPhoneOS</key>
     <true/>
     <key>NSAppTransportSecurity</key>
