--- a/services/user-service/.env
+++ b/services/user-service/.env
@@ -5,3 +5,8 @@ DB_USERNAME=postgres
 DB_PASSWORD=your_password
 DB_NAME=user-service
 DB_SYNCRONIZE=true
+
+
+# Moov
+moov_public_key=sm7vhiyvgr3tf8BZ
+moov_api_key=JxFJNsT7V7Z7mTf2BIev1Sq68wIpARab
