--- a/apps/prowl-mobile/eas.json
+++ b/apps/prowl-mobile/eas.json
@@ -11,11 +11,19 @@
     },
     "preview": {
       "distribution": "internal",
+      "developmentClient": true,
       "ios": {
         "simulator": true
       },
       "android": {
         "buildType": "apk"
+      }
+    },
+    "development-simulator": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
       }
     }
   },
