--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.14.5",
+    "@babel/plugin-proposal-class-static-block": "^7.21.0",
+    "@babel/plugin-transform-class-static-block": "^7.24.4",
     "@babel/preset-react": "^7.14.5",
-    "@expo/cli": "~0.16.5",
+    "@expo/cli": "^0.18.13",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nrwl/nest": "^18.3.4",
@@ -35,14 +37,15 @@
     "@types/jest": "^29.4.0",
     "@types/node": "~18.16.9",
     "@types/react": "~18.2.45",
-    "@types/react-dom": "18.2.14",
+    "@types/react-dom": "~18.2.25",
     "@types/react-is": "18.2.2",
+    "@types/react-native": "^0.73.0",
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
     "babel-jest": "^29.4.1",
     "babel-plugin-styled-components": "1.10.7",
-    "babel-preset-expo": "~10.0.0",
+    "babel-preset-expo": "~11.0.6",
     "cypress": "^13.6.6",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
@@ -54,14 +57,14 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "jest-expo": "~50.0.1",
+    "jest-expo": "~51.0.2",
     "nx": "18.3.4",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.4.2",
+    "typescript": "~5.3.3",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
@@ -70,13 +73,22 @@
     "@apollo/sandbox": "^2.5.1",
     "@apollo/server": "^4.10.4",
     "@apollo/subgraph": "^2.7.4",
-    "@expo/metro-config": "~0.17.3",
-    "@expo/metro-runtime": "~3.1.1",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@coinbase/cbpay-js": "^2.1.0",
+    "@coinbase/waas-sdk-viem": "^3.0.2",
+    "@coinbase/waas-sdk-web": "^3.3.2",
+    "@coinbase/waas-sdk-web-react": "^3.2.2",
+    "@coinbase/wallet-mobile-sdk": "^1.0.13",
+    "@coinbase/wallet-sdk": "^4.0.0",
+    "@expo/metro-config": "~0.18.1",
+    "@expo/metro-runtime": "~3.2.1",
     "@expo/vector-icons": "^14.0.1",
-    "@expo/webpack-config": "^19.0.1",
+    "@expo/webpack-config": "~19.0.1",
     "@grpc/grpc-js": "^1.10.7",
     "@grpc/proto-loader": "^0.7.13",
     "@grpc/reflection": "^1.0.4",
+    "@moovio/moov-js": "^0.0.14",
+    "@moovio/node": "^1.2.2",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.2.2",
@@ -87,22 +99,24 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^10.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "@shopify/flash-list": "1.6.3",
+    "@shopify/flash-list": "1.6.4",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "crypto-browserify": "^3.12.0",
     "date-fns": "^3.6.0",
-    "expo": "~50.0.3",
-    "expo-auth-session": "^5.5.2",
-    "expo-dev-client": "~3.3.11",
-    "expo-linking": "^6.3.1",
-    "expo-splash-screen": "~0.26.1",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.8",
+    "expo-auth-session": "~5.5.2",
+    "expo-dev-client": "~4.0.14",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-splash-screen": "^0.27.4",
+    "expo-status-bar": "~1.12.1",
     "express-oauth2-jwt-bearer": "^1.6.0",
     "graphql": "^16.8.1",
     "graphql-depth-limit": "^1.1.0",
@@ -116,22 +130,27 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.74.1",
     "react-native-auth0": "^3.2.0",
-    "react-native-gesture-handler": "^2.16.2",
-    "react-native-pager-view": "6.2.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-local-storage": "^1.5.2",
+    "react-native-mmkv": "^2.12.2",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "1.2.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.9",
-    "react-native-webview": "13.6.4",
+    "react-native-webview": "13.8.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "stream-browserify": "^3.0.0",
     "styled-components": "5.3.6",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.20"
   }
